fix search bar (on firefox) change logo add route watch/:text fix layout navbar

--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -234,6 +234,10 @@
     .feed-container {
         max-width: 680px !important;
     } 
+    .margin-logo{
+        margin-left: 350px !important;
+        margin-right: 350px !important;
+    }
   }
 
 
